Filter by courses user is a part of